--- a/Report/report-template.tex
+++ b/Report/report-template.tex
@@ -262,7 +262,7 @@ Since German has very rich morphological phenomena, we still have a very long wa
 
 \renewcommand\refname{References}
 \bibliographystyle{plainnat}
-\bibliography{refs}
+\bibliography{citations.bib}
 
 
 \label{lastpage}
